--- a/file_roge/homePage.css
+++ b/file_roge/homePage.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Rubik&family=Work+Sans:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Pinyon+Script&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,300;1,700&display=swap');
 
 
 
@@ -15,6 +14,8 @@
     grid-template-columns: 300px auto auto;
     font-size: 30px;
     margin: 0px 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
     }
     
 
