--- a/file_roge/homePage.css
+++ b/file_roge/homePage.css
@@ -1,176 +1,110 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,300;1,700&display=swap');
-
-
-
-*{
-    padding: 0px;
-    margin: 0px;
-    text-decoration: none;
-    color: black;
-}
-.navBar{
-    display: grid;
-    grid-template-columns: 300px auto auto;
-    font-size: 30px;
-    margin: 0px 10px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    }
-    
-
-.logo{
-width: 150px;
-height: 60px;
-size: 30px;
-margin-top: 10px;
-}
-
-#divCategory{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    font-size: 25px;
-    margin: 30px 0px;
-    text-align: center;
-}
-
-#Links{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-
-}
-.tangerLaPorteDeMaroc{
-    margin-left:   130px;
-}
-
-.divNavBar{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    text-align: center;
-    align-items: center;
-    font-size: 25px;
-    text-decoration:none;
-}
-#divNavBar{
-    text-decoration: none;
-
-}
-#favoris{
-margin-top: 10px;
-}
-
-
-.login{
-    background-color: #1A2252;
-    text-align: center;
-    border-radius:10px;
-    border: none;
-    width:100px;
-    height: 40px;
-
-}
-#loginLink{
-    text-decoration: none;
-    color:#ffffff;
-    font-size: 20px;
-
-}
-.section{
-    background-image: url(images/tanger1.jpg);
-    height: 80vh;
-    margin-bottom: 10px;
-    background-repeat: no-repeat;
-}
-
-.mainCategory{
-    margin-top:50px;
-}
-.category{
-    text-align: center;
-}
-
-.divCategory{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    margin: 0 10px 10px 90px;
-}
-.imagesCatégorie{
-    box-shadow:  12px 12px 10px rgba(119, 119, 119, 0.422);
-    border-radius: 27px;
+.aboutTanger{
+    height: 100vh;
 }
 #aboutTanger1{
-    text-align: center;
-    margin: 90PX;
-
+font-style: normal;
+font-weight: 700;
+font-size: 44px;
+line-height: 96px;
+position: absolute;
+left: 97px;
+top: 568px;
+margin: 20px ;
+color: #1A2252;
 }
+
 .aboutTanger1{
-    position:absolute;
-    top: 250px;
-}
-.tangerLaporte{
-position: absolute;
-width: 540px;
-left: 500px;
-top: 1220px;
-}
-.tangerLaPorte2{
-position: absolute;
-width: 540px;
-left: 650px;
-top: 1390px;
-
+display: grid;
+grid-template-columns: repeat(2,1fr);
+position: relative;
+width: 1089px;
+height: 534px;
+left: 19px;
+top: 140px;
+box-shadow: 2px 13px 53px 5px rgba(0, 0, 0, 0.25);
+border-radius: 21px;
 }
 
 .imageAboutTanger{
 position: absolute;
-width: 350px;
-height: 500px;
-left: 64px;
-top: 1300px;
+width: 309px;
+height: 425px;
+left: 55px;
+top: 30px;
 }
-
 .imageAboutTanger2{
-position: absolute;
-width: 350px;
-height: 450px;
-left: 250px;
-top: 1450px;
+    position: absolute;
+    width: 300px;
+    height: 425px;
+    left: 220px;
+    top: 100px;
+}
+.tangerLaporte{
+    position: absolute;
+    font-size: 25px;
+    font-style: normal;
+    font-weight:400;
+    top: 30px;
 }
 
-.aboutTanger2{
-    margin-left: 50px;
-    margin-top: 200px;
+.mainCategory{
+margin: 3em 0px 30px 1em;
+}
+.category{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 96px;
+    left: 97px;
+    margin: 20px ;
+    color: #1A2252;
+}
+.divCategory{
+    margin-right: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+.card-catégorie{
+    border-radius: 20px;
+    width: 300px;
+    height: 400px;
     position: relative;
-    top: 640px;
+    overflow: hidden;
+    transition: all 0.4 ease-out;
+	background:radial-gradient(#111 50%, #000 100%);
+}
+.card-catégorie img{
+    transform: scale(1.3);
+    transition: all 0.4 ease-out;
+}
+
+.card-catégorie:hover img{
+    transform: scale(1.1) translateY(-20px);
+    opacity: 0.3;
+}
+.card-catégorie .description{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	padding: 15px;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	font-size: 18px;
+}
+.card-catégorie .description h3{
+	font-weight: 700;
+	font-size: 32px;
+	margin: 0 0 20px;
+	transform: translateY(30px);
+	opacity: 0;
+	transition: all 0.3s ease-out;
 
 }
-.comentAllerATanger{
-    text-align: center;
-    margin-bottom: 40px;
+
+.card-catégorie:hover .description h3{
+	opacity: 1;
+	transform: translateY(0px);
 }
-.allerATanger{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-bottom: 80px;
-}
-.imgAllerATanger{
-    border-radius:5px;
-    height: 500px;
-    width: 400px;
-}
-.laMédinaDeTanger{
-    text-align: center;
-    margin: 120px 0px 50px;
-}
-.laMédinaTNG{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-.tanger5{
-    width: 460px;
-    height: 470px;
-    border-radius:5px;
-}
+
+
